--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -93,11 +93,11 @@ phone = "86-18123093625"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "100 Serra Daxue East Road", city = "Nanning", region = "Guangxi", postcode = "530000", country = "China", country_code = "CHN"}
+address = {street = "100 Daxue East Road", city = "Nanning", region = "Guangxi", postcode = "530000", country = "China", country_code = "CHN"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = {latitude = "22.4275", longitude = "-122.1697"}
+# coordinates = {latitude = "22.4275", longitude = "-122.1697"}
 
 # Directions for visitors to locate you.
 # directions = "Enter Building 1 and take the stairs to Office 200 on Floor 2"
